--- a/requirements.txt
+++ b/requirements.txt
@@ -8,10 +8,10 @@ gunicorn==20.0.4
 Pillow==8.0.1
 #playwright
 pre-commit==2.9.3
-psycopg2-binary==2.8.6
+#psycopg2-binary==2.8.6
 pytest==6.2.0
 pytest-cov==2.10.1
 pytest-django==4.1.0
 #pytest-playwright==0.0.9
 pytest-xdist==2.1.0
-redis==3.5.3
+#redis==3.5.3
