--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ django-crispy-forms==1.10.0
 django-storages==1.10.1
 django-tinymce==3.2.0
 gunicorn==20.0.4
-Pillow==8.0.1
+#Pillow==8.0.1
 #playwright
 pre-commit==2.9.3
 #psycopg2-binary==2.8.6
